fix: cancel toc overflow hide

--- a/source/css/_pages/_post/toc.styl
+++ b/source/css/_pages/_post/toc.styl
@@ -6,8 +6,6 @@
   padding 20px
   height calc(100vh - 140px)
   overflow scroll
-  &::-webkit-scrollbar
-    display none
   @media (max-width 1200px)
     display none
   ol, li
